--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700&family=Roboto:wght@400;500;700;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .linear-gradient {
+    @apply bg-gradient-to-r from-[#3D8BFF]  to-[#AB23FF];
+  }
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
