--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,16 @@
   margin: 0;
   padding: 0;
 }
+
+.passing-through {
+  border-radius: 0.375rem;
+  background: linear-gradient(175deg, #3d8bff 4.29%, #ab23ff 95.71%);
+  mix-blend-mode: soft-light;
+}
+
+.gradient {
+  background: var(--Linear, linear-gradient(90deg, #3d8bff 0%, #ab23ff 100%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
